--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /.idea/
-/target/
+/target/classes
+/target/generated-sources
+/target/generated-test-sources
+/target/maven-archiver
+/target/maven-status
+/target/surefire-reports
+/target/test-classes
 /soccer-rank-kata.iml
